[package]
name = "learn-dependency-injection-rust"
version = "0.1.0"
authors = ["epilif3sotnas <filipesantos1999@hotmail.com>"]
edition = "2021"
description = "Learn Dependency Injection in Rust."
repository = "https://github.com/epilif3sotnas/learn-dependency-injection.git"
license = "Apache-2.0"
publish = false


[dependencies]


[[bin]]
name = "learn-dependency-injection-rust"
path = "src/main.rs"